--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -249,6 +249,8 @@
   <string name="up">up</string>
   <string name="pref_disable_network_title">No Network Auto-Sleep</string>
   <string name="pref_disable_network_summary">Put Tor to sleep when there is no internet available</string>
+  <string name="pref_hold_wakelock_title">Hold Wake Lock</string>
+  <string name="pref_hold_wakelock_summary">Prevents the device from sleeping to keep Tor running</string>
   <string name="newnym">You\'ve switched to a new Tor identity!</string>
 
   <string name="menu_verify_browser">Browser</string>
